[package]
name = "hq-rs"
version = "0.2.0"
edition = "2021"
description = "command-line HCL processor"
license = "MIT"
documentation = "https://docs.rs/hq-rs/latest"
homepage = "https://github.com/miller-time/hq"
repository = "https://github.com/miller-time/hq"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hcl-rs = "0.17"
pest = "2.7"
pest_derive = "2.7"
