[package]
name = "hq-rs"
version = "0.10.2"
edition = "2021"
description = "command-line HCL processor"
license = "MIT"
documentation = "https://docs.rs/hq-rs/latest"
homepage = "https://github.com/miller-time/hq"
repository = "https://github.com/miller-time/hq"

[dependencies]
annotate-snippets = "0.11"
clap = { version = "4.5", features = ["derive"] }
hcl-edit = "0.8"
hcl-rs = "0.17"
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
utilities = { path = "utilities" }
