[package]
name = "hq-rs"
version = "0.16.0"
edition = "2021"
description = "command-line HCL processor"
license = "MIT"
documentation = "https://docs.rs/hq-rs/latest"
homepage = "https://github.com/miller-time/hq"
repository = "https://github.com/miller-time/hq"

[dependencies]
annotate-snippets = "0.11"
clap = { version = "4.5", features = ["derive"] }
hcl-edit = "0.8"
hcl-rs = "0.18"
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
utilities = { path = "utilities" }
